--- a/robin_in/public/index.html
+++ b/robin_in/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
-
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -15,9 +14,8 @@
   <title>React App</title>
 </head>
 
-<body class="h-full ">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+<body class="h-full">
+  <div id="root" class="h-full"></div>
 </body>
 
 </html>
