--- a/robin_in/public/index.html
+++ b/robin_in/public/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" as="style" crossOrigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css" />
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mxphjh1u0c"></script>
+  <script type="text/javascript" src="../src/MarkerClustering.js"></script>
   <title>React App</title>
 </head>
 
