--- a/robin_in/public/index.html
+++ b/robin_in/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -15,7 +15,7 @@
   <title>React App</title>
 </head>
 
-<body class="h-full">
+<body>
   <div id="root" class="h-full"></div>
 </body>
 
